# nvr-viewer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/skills/nvr-server-setup/: SKILL.md
docs/: building-your-own-nvr.md
scripts/: install.ps1
src/nvr_viewer/: __init__.py  __main__.py  app.py  daemon.py  notifications.py
src/nvr_viewer/core/: decoder.py  recorder.py  rtsp_client.py
src/nvr_viewer/detection/: detector.py  events.py  motion.py
src/nvr_viewer/network/: scanner.py  sdcard.py
src/nvr_viewer/storage/: credentials.py  database.py  manager.py  models.py
src/nvr_viewer/ui/: viewer.py
src/nvr_viewer/web/: api.py  server.py  state.py  streaming.py
src/nvr_viewer/web/routers/: __init__.py  cameras.py  detection.py  events.py  notifications.py  recordings.py  service.py  settings.py  system.py  timeline.py
src/nvr_viewer/web/static/: app.js
src/nvr_viewer/web/templates/: events.html  index.html  settings.html  timeline.html
tests/: test_api_routes.py  test_e2e_workflows.py  test_storage_manager.py
